--- a/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
@@ -8,210 +8,224 @@ description: Create a new Page Builder element.
 
 :::tip What you'll learn
 - how to create a new Page Builder element
-- how to add custom plugins to Webiny apps
+- how to register plugins in Webiny applications
 :::
 
 ## Overview
 
-Although the Page Builder app comes with a lot of ready-made page elements, at one point in time, you might need to create your own to satisfy your specific requirements.
-To achieve that, we can utilize a couple of simple plugins, which is what we'll cover in this short tutorial. So, without further ado let's get started.
+Although the Page Builder application comes with a plethora of ready-made page elements, at one point in time, you might need to create your own to satisfy your specific requirements.
+To achieve that, we can utilize a couple of simple plugins, which is what we'll cover in this short tutorial.
 
 ## What We'll Build
 
-We’ll create a new element that will allow content creators to embed content using an `iframe`.
-Here's what the end result will look like:
+We’ll create a new page element that allows content creators to embed content using an `iframe`.
+Here's what the final result will look like:
 
 <!-- vale off -->
 
 <img
-  src={require("../assets/page-builder/iframe-editor.png").default}
-  style={{ marginBottom: 20 }}
-  alt="Iframe page element"
+    src={require("./assets/iframe-end.png").default}
+    style={{marginBottom: 20}}
+    alt="Iframe page element"
 />
 
 <!-- vale on -->
 
-:::note
-We're creating a sample plugin here, but the same principle applies no matter what type of plugin the developer wants to create.
+:::info
+The full code example used in this tutorial is available in our [webiny-examples](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element) Github repository.
 :::
 
-## Prerequisites
+## Organization of Files
 
-1. **A Webiny Project**
+Although you can place and organize the plugins in any way you prefer for your project, we recommend adopting the following organization.
 
-This tutorial assumes you have already created a new Webiny project to work on.
-We recommend reading our [install Webiny](/docs/tutorials/install-webiny) tutorial which will show you how to do it.
+When creating new page elements, it's recommended to have all of the needed plugins in a single shared folder.
+This is because some of the plugins will need to be imported both within the **Admin Area** `(apps/admin)` and **Website** `(apps/website)` applications.
 
-2. **Organization of Files**
-
-Although you can place and organize the plugin files as you see fit for your project, we recommend following some kind of structure
-which is easy to understand and maintain later on.
-
-In this particular case, we'll need to share some logic (a plugin) across multiple apps i.e. `apps/admin` and `apps/website`.
-
-For this we're going to create a package named `iFrameElement` inside `packages` folder, and simply import and reuse the code (plugin) across apps.
+With that in mind, for this tutorial, we will create the new [`pb-element-iframe`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe) folder in the [`apps/extensions`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions) folder.
 
 :::note
-This is a very common scenario for Page Builder plugins because the Admin app use the plugin to render element inside editor
-and the Website app need the same plugin to render element in the actual page.
+By default, the `extensions` folder does not exist, so you'll need to create it.
 :::
+
+### Anatomy of Element Plugins
 
 To create a new page element, we need to register two sets of plugins:
-1. For the `admin` app:
-   - a plugin that defines how it's rendered in the editor
-   - a plugin that defines all of the available settings and options for it
-2. For the `website` app:
-   - a plugin that defines how the page element is rendered on the actual page
+1. For the **Admin Area** application:
+- a plugin that defines how it's rendered in the page editor
+- a plugin that defines all the available settings and options for it
+2. For the **Website** application:
+- a plugin that defines how the page element is rendered on the actual page
 
-To better organize files we'll write all the plugins needed for the Admin app in `iFrameElement/src/admin` and plugins needed for
-the Website app in `iFrameElement/src/render`.
+To better organize files, we'll write all the plugins needed for the **Admin Area** application and **Website** application in
+[`apps/extensions/pb-element-iframe/admin`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/admin) and [`apps/extensions/pb-element-iframe/render`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/render), respectively
 
-In the end the folder structure of our project will look similar to this:
+Let's get started with scaffolding initial folders and files for our page element plugins.
+
+### Scaffold Folder and Files for Plugins
+
+- create a folder named [`pb-element-iframe`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe) inside [`apps/extensions`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/)
+- create a [`package.json`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/package.json) file inside `apps/extensions/pb-element-iframe` with the following contents:
+
+```json title="apps/extensions/pb-element-iframe/package.json"
+{
+  "name": "@extensions/pb-element-iframe",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "dependencies": {
+    "@emotion/styled": "10.0.27",
+    "@webiny/app-page-builder": "5.12.0",
+    "@webiny/ui": "5.12.0",
+    "@webiny/validation": "5.12.0",
+    "classnames": "^2.2.6",
+    "emotion": "10.0.27",
+    "react": "^16.14.0"
+  }
+}
+```
+
+- create a [`tsconfig.json`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/tsconfig.json) file with the following contents:
+```json title="apps/extensions/pb-element-iframe/tsconfig.json"
+{
+  "extends": "../../../tsconfig",
+  "include": ["."],
+  "compilerOptions": {
+    "composite": false
+  }
+}
+```
+- add `"apps/extensions/pb-element-iframe"` to workspaces packages inside `package.json` in project root
+
+- create `admin` and `render` folders inside `apps/extensions/pb-element-iframe`
+
+- link workspaces by running `yarn install` command from project root. After completion there will be a [symbolic link](https://en.wikipedia.org/wiki/Symbolic_link) of `@extensions/pb-element-iframe` package in `node_modules`
+
+- add `@extensions/pb-element-iframe` package as a dependency to both the Admin Area application and Website application,
+by editing the `apps/admin/code/package.json` and `apps/website/code/package.json` files respectively:
+
+```shell
+"@extensions/pb-element-iframe": "^1.0.0",
+```
+
+After successfully performing the above-mentioned steps, the folder structure of our project will look similar to this:
 
 ```
 // Config files are omitted for sake of brevity.
 
 ├── api
-│   ├── code
-│   |__ pulumi
 ├── apps
 │   ├── admin
+│   ├── extensions
+│   │   └── pb-element-iFrame
+│   │       ├── admin
+│   │       ├── render
+│   │       ├── package.json
+│   │       └── tsconfig.json
 │   ├── theme
 │   └── website
 ├── package.json
-├── packages
-|   |   // This is our new page element plugin
-│   └── iFrameElement
-│       ├── src
-│       │   ├── admin
-│       │   │   ├── components
-│       │   │   │   └── iFrameEmbed.tsx
-│       │   │   └── index.tsx
-│       │   ├── assets
-│       │   │   └── iframe-icon.svg
-│       │   └── render
-│       │       ├── components
-│       │       │   └── iFrame.tsx
-│       │       └── index.tsx
-│       └── tsconfig.json
+├── tsconfig.build.json
+├── tsconfig.json
+├── webiny.project.ts
 └── yarn.lock
 ```
 
-3. **How to create a package in webiny project**
+## Create Plugins for the Admin Area Application
 
-We recommend reading the [create a package in webiny project](https://www.webiny.com/docs/tutorials/create-a-package-in-webiny-project/#preparing-the-package-for-usage)
-article, in which we explain the organization of package files in detail.
-
-:::note
-Before using the `iframeElement` that we're about to build in this tutorial, you need to perform the following two steps:
-- Install the package using ```yarn install```
-- Build the package using ```yarn build```
-
-Learn more about preparing the package for usage in the [create a package in webiny project](https://www.webiny.com/docs/tutorials/create-a-package-in-webiny-project/#preparing-the-package-for-usage) tutorial.
-:::
-
-
-## Creating the Plugins
-
-All of the available page elements can be accessed via the elements menu, which can be opened by clicking on the "plus" icon, located on the left side of the editor:
+Click the **plus** icon located on the left sidebar of the editor to access all the available page elements:
 
 <!-- vale off -->
 
 <img
-  src={require("../assets/page-builder/editor-elements.png").default}
-  style={{ marginBottom: 20 }}
-  alt="Iframe page element"
+    src={require("./assets/iframe-add-element.png").default}
+    style={{marginBottom: 20}}
+    alt="Iframe page element"
 />
 
 <!-- vale on -->
 
 As mentioned, this list of page elements can be expanded and custom page elements can be created via plugins.
-Now that we have covered the brief overview of what we need to do and how to organize files. Let's get started with creating plugins.
+We will add the necessary plugins for Admin Area application in the [`apps/extensions/pb-element-iframe/admin/index.tsx`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/admin/index.tsx) file.
 
-## Add Plugins in the Admin App
+### Editor Element Plugin
 
-### Editor Plugin
+We will start with the [`PbEditorPageElementPlugin`](/docs/references/page-builder/plugins#pb-editor-page-element) plugin:
 
-Let's add the new page element in the editor. First, we will add the necessary plugins in the `packages/iFrameElement/src/admin/index.tsx` file.
-
-We will start with the [`pb-editor-page-element`](/docs/references/page-builder/plugins#pb-editor-page-element) plugin type.
-
-You can find the full example with all required code [in the example folder here](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/packages/iFrameElement)
-
-```tsx title="packages/iFrameElement/src/admin/index.tsx"
+```tsx title="apps/extensions/pb-element-iframe/admin/index.tsx"
 // ...
 // Some code is removed for sake of brevity.
 // ...
-import { PbEditorPageElementPlugin } from "@webiny/app-page-builder/types";
-import { ReactComponent as IFrameIcon } from "./iframe-icon.svg";
-import IFrameEmbed from "./components/IFrameEmbed";
+import React from "react";
+import { PbEditorPageElementPlugin, DisplayMode } from "@webiny/app-page-builder/types";
+import { createInitialPerDeviceSettingValue } from "@webiny/app-page-builder/editor/plugins/elementSettings/elementSettingsUtils";
+
+import { ReactComponent as IFrameIcon } from "./assets/iframe-icon.svg";
+import IFrameEditor from "./components/IFrameEditor";
 
 export default () => {
-  return [
-    {
-      name: "pb-editor-page-element-iframe",
-      type: "pb-editor-page-element",
-      elementType: "iframe",
-      toolbar: {
-        // We use `pb-editor-element-group-media` to put our plugin into the Media group.
-        title: "iFrame",
-        group: "pb-editor-element-group-media",
-        preview() {
-          return (
-            <PreviewBox>
-              <IFrameIcon />
-            </PreviewBox>
-          );
-        }
-      },
-      settings: ["pb-editor-page-element-settings-delete"],
-      target: ["cell", "block"],
-      onCreate: "open-settings",
-      create(options) {
-        /*
+    return [
+        {
+            name: "pb-editor-page-element-iframe",
+            type: "pb-editor-page-element",
+            elementType: "iframe",
+            toolbar: {
+                // We use `pb-editor-element-group-media` to put our plugin into the Media group.
+                title: "iFrame",
+                group: "pb-editor-element-group-media",
+                preview() {
+                    return (
+                        <PreviewBox>
+                            <IFrameIcon />
+                        </PreviewBox>
+                    );
+                }
+            },
+            settings: [
+                "pb-editor-page-element-settings-delete",
+                "pb-editor-page-element-style-settings-height"
+            ],
+            target: ["cell", "block"],
+            onCreate: "open-settings",
+            create(options) {
+                /*
                     Create function is here to create the initial data
                     for the page element, which then is utilized in the
-                    IFrameEditor component and in the settings dialog.
+                    IFrameEditor component and in the element settings.
                 */
-        return {
-          type: "iframe",
-          elements: [],
-          data: {
-            iframe: {
-              // The URL property will be populated when user enters the URL in the settings dialog.
-              url: "",
-              height: 370
+                return {
+                    type: "iframe",
+                    elements: [],
+                    data: {
+                        iframe: {
+                            // The URL property will be populated when user enters the URL in the element settings.
+                            url: "",
+                        },
+                        settings: {
+                            height: createInitialPerDeviceSettingValue(
+                                { value: "370px" },
+                                DisplayMode.DESKTOP
+                            )
+                        }
+                    },
+                    ...options
+                };
             },
-            settings: {
-              horizontalAlign: "center",
-              margin: {
-                desktop: { all: 0 },
-                mobile: { all: 0 }
-              },
-              padding: {
-                desktop: { all: 0 },
-                mobile: { all: 0 }
-              }
+            render(props) {
+                /*
+                    Every render function receives the page element's
+                    data assigned to the "element.data" property in
+                    the received props. In here we will store the
+                    "iframe.url" which will be provided via the page
+                    element's settings.
+                */
+                return <IFrameEditor {...props} />;
+            },
+            renderElementPreview({ width, height }) {
+                return <img style={{ width, height }} alt={"iFrame"} />;
             }
-          },
-          ...options
-        };
-      },
-      render(props) {
-        /*
-          Every render function receives the page element's
-          data assigned to the "element.data" property in
-          the received props. In here we will store the
-          "iframe.url" which will be provided via the page
-          element's settings dialog.
-        */
-        return <IFrameEmbed {...props} />;
-      },
-      renderElementPreview({ width, height }) {
-        return <img style={{ width, height }} alt={"iFrame"} />;
-      }
-    } as PbEditorPageElementPlugin
-  ];
+        } as PbEditorPageElementPlugin
+    ];
 };
 ```
 
@@ -220,138 +234,138 @@ They define the initial page element's settings and how it will be rendered in t
 
 The `data` property holds the initial state of the page element which can contain any data you might need.
 
-The `toolbar` property helps us put our plugin into the tool bar.
+The `toolbar` property helps us put our plugin into the toolbar.
 
 Finally, it’s up to the `render` function to define how the page element will be rendered once the user drops it on the page.
 
 :::note
-Notice the `props` that were passed to the render function. This object contains all of the relevant page element's data and settings.
+Notice the `props` that were passed to the `render` function. This object contains all the relevant page element's data and settings.
 :::
 
-After registering the plugin in the Admin app it will appear in editor toolbar similar to the pre-defined elements as shown below:
+After [registering the plugin](#register-plugins-in-the-admin-area-application) in the Admin Area application the new page element should appear in the editor toolbar,
+similar to the pre-defined elements as shown below:
 
 <!-- vale off -->
 
 <img
-  src={require("../assets/page-builder/pb-editor-toolbar-demo.gif").default}
-  style={{ marginBottom: 20 }}
-  alt="Editor Iframe page element"
+    src={require("./assets/add-toolbar.gif").default}
+    style={{marginBottom: 20}}
+    alt="Editor Iframe page element"
 />
 
 <!-- vale on -->
 
-Now that we've covered the overall structure of plugin. Let's see what's inside `IFrameEmbed` component.
-The following code snippet shows the entire `IFrameEmbed` component:
+Now that we've covered the overall structure of the plugin,
+let's see what's inside the [`IFrameEditor`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/admin/components/iframeEditor.tsx) component:
 
-```tsx title="packages/iFrameElement/src/admin/components/iFrameEmbed.tsx"
+```tsx title="apps/extensions/pb-element-iframe/admin/components/iframeEditor.tsx"
 // ...
 // Some code is removed for sake of brevity.
 // ...
 
-const IFrameEmbed = props => {
-  const { element } = props;
+const IframeEditor = props => {
+    const { element } = props;
 
-  if (!element.data.iframe.url) {
+    if (!element.data.iframe.url) {
+        return (
+            <PreviewBox>
+                <IFrameIcon />
+            </PreviewBox>
+        );
+    }
+
     return (
-      <PreviewBox>
-        <IFrameIcon />
-      </PreviewBox>
+        <ElementRoot
+            className={
+                "webiny-pb-base-page-element-style webiny-pb-page-element-iframe " + outerWrapper
+            }
+            element={element}
+        >
+            <iframe src={element.data.iframe.url} width="100%" height="100%" />
+        </ElementRoot>
     );
-  }
-
-  return (
-    <ElementRoot
-      className={"webiny-pb-base-page-element-style webiny-pb-page-element-iframe " + outerWrapper}
-      element={element}
-    >
-      <div className={innerWrapper}>
-        <div id={element.id} />
-        <iframe src={element.data.iframe.url} width="100%" height={element.data.iframe.height} />
-      </div>
-    </ElementRoot>
-  );
 };
 
-export default IFrameEmbed;
+export default IframeEditor;
 ```
 
-As you can see it's a simple React component which render an `iframe` HTML element.
+As you can see, it's a simple React component which renders an `iframe` HTML element.
 
 :::note
-Every element needs to have [`ElementRoot`](https://github.com/webiny/webiny-js/blob/v5/packages/app-page-builder/src/render/components/ElementRoot.tsx#L31)
-component as root because it apply `styles, classes and attributes` to the element assigned via right sidebar style tab.
+Every element needs to have the [`ElementRoot`](https://github.com/webiny/webiny-js/blob/v5/packages/app-page-builder/src/render/components/ElementRoot.tsx#L31)
+component as root because it applies **styles**, **classes** and **attributes** to the element assigned via right sidebar style tab.
 :::
 
 :::info
 Notice we've added [`webiny-pb-base-page-element-style`](https://github.com/webiny/webiny-js/blob/v5/apps/theme/pageBuilder/styles/base.scss#L59) CSS class.
-Every element needs to have it as it contains all base styles applied by Page Builder app.
+Every element needs to have it as it contains all base styles applied by the Page Builder application.
 :::
 
 :::tip
-Notice we've added `webiny-pb-page-element-iframe` CSS class, which enables us to add custom CSS styling if needed.
+Notice we've added [`webiny-pb-page-element-iframe`](https://github.com/webiny/webiny-examples/blob/master/iframe-page-element/apps/extensions/pb-element-iframe/admin/components/iframeEditor.tsx#L35) CSS class, which enables us to add custom CSS styling if needed.
 :::
 
-### Element Settings
+### Element Settings Plugin
 
-The next plugin we'll need to define is the [`pb-editor-page-element-advanced-settings`](/docs/references/page-builder/plugins#pb-editor-page-element-advanced-settings),
-which we will use to render required UI for settings so the user can provide an iframe URL.
-The settings UI will be shown automatically in the right sidebar when the user drags and drops the page element on the page.
+The next plugin we'll need to define is the [`PbEditorPageElementAdvancedSettingsPlugin`](/docs/references/page-builder/plugins#pb-editor-page-element-advanced-settings),
+which we will use to render the required UI for settings, so the user can provide an `iframe` URL.
+The settings UI will be shown automatically in the right sidebar when the user drag-and-drop the page element on the page.
 
-This plugin type will be added in the `packages/iFrameElement/src/admin/index.tsx` file too.
+We will add this plugin in the [`apps/extensions/pb-element-iframe/admin/iframeSettings.tsx`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/admin/iframeSettings.tsx) file:
 
-```tsx title="packages/iFrameElement/src/admin/index.tsx"
+```tsx title="apps/extensions/pb-element-iframe/admin/iframeSettings.tsx"
 // ...
 // Some code is removed for sake of brevity.
 // ...
-{
-  name: "pb-editor-page-element-advanced-settings-iframe",
-  type: "pb-editor-page-element-advanced-settings",
-  elementType: "iframe",
-  render({ Bind, submit }) {
-      return (
-          <Accordion title={"IFrame"} defaultValue={true}>
-              <React.Fragment>
-                  <Bind
-                      name={"iframe.url"}
-                      validators={validation.create("required,url")}
-                  >
-                      <Input label={"URL"} description={"Enter an iFrame URL"} />
-                  </Bind>
-                  <Grid className={classes.simpleGrid}>
-                      <Cell span={12}>
-                          <ButtonContainer>
-                              <SimpleButton onClick={submit}>Save</SimpleButton>
-                          </ButtonContainer>
-                      </Cell>
-                  </Grid>
-              </React.Fragment>
-          </Accordion>
-      );
-  }
-} as PbEditorPageElementAdvancedSettingsPlugin
+
+export default {
+    name: "pb-editor-page-element-advanced-settings-iframe",
+    type: "pb-editor-page-element-advanced-settings",
+    elementType: "iframe",
+    render({ Bind, submit }) {
+        return (
+            <Accordion title={"IFrame"} defaultValue={true}>
+                <React.Fragment>
+                    <Bind name={"iframe.url"} validators={validation.create("required,url")}>
+                        <Input label={"URL"} description={"Enter an iFrame URL"} />
+                    </Bind>
+                    <Grid className={classes.simpleGrid}>
+                        <Cell span={12}>
+                            {/*  @ts-ignore */}
+                            <ButtonContainer>
+                                {/*  @ts-ignore */}
+                                <SimpleButton onClick={submit}>Save</SimpleButton>
+                            </ButtonContainer>
+                        </Cell>
+                    </Grid>
+                </React.Fragment>
+            </Accordion>
+        );
+    }
+} as PbEditorPageElementAdvancedSettingsPlugin;
 ```
 
-As mentioned, this code will show the settings UI in sidebar and ask for the URL of the iframe, as shown in the image below:
+As mentioned, this code will show the settings UI in sidebar and ask for the URL of the `iframe`, as shown below:
 
 <!-- vale off -->
 
 <img
-  src={require("../assets/page-builder/iframe-element-settings.gif").default}
-  style={{ marginBottom: 20 }}
-  alt="Iframe page element settings"
+    src={require("./assets/drop-iframe-element.gif").default}
+    style={{marginBottom: 20}}
+    alt="Iframe page element settings"
 />
 
 <!-- vale on -->
 
-### Render Plugin
+### Render Element Plugin
 
-As mentioned, every page element consists of two sets of plugins. We've already covered the editor side of the logic now, let's also see the actual plugin/code that will render it to the page.
+As mentioned, every page element consists of two sets of plugins. We've already covered the editor side of the logic, now, let's write the plugin that will render it to the page preview and the actual page.
 
-In order to render the element on the actual page, we will use the [`pb-render-page-element`](/docs/references/page-builder/plugins#pb-render-page-element) plugin.
+In order to render the element on the actual page, we will use the [`PbEditorPageElementPlugin`](/docs/references/page-builder/plugins#pb-render-page-element) plugin.
 
-We will add this plugin in the `packages/iFrameElement/src/render/index.tsx` file.
+We will add this plugin in the [`apps/extensions/pb-element-iframe/render/index.tsx`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/render/index.tsx) file.
 
-```tsx title="packages/iFrameElement/src/render/index.tsx"
+```tsx title="apps/extensions/pb-element-iframe/render/index.tsx"
 import React from "react";
 import { PbRenderElementPlugin } from "@webiny/app-page-builder/types";
 
@@ -368,9 +382,9 @@ export default () =>
   } as PbRenderElementPlugin);
 ```
 
-The following code snippet shows the `IFrame` component:
+The following code snippet shows the [`IFrame`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/extensions/pb-element-iframe/render/index.tsxapps/extensions/pb-element-iframe/render/components/iFrame.tsx) component:
 
-```tsx title="packages/iFrameElement/src/render/components/iFrame.tsx"
+```tsx title="apps/extensions/pb-element-iframe/render/components/iFrame.tsx"
 import { ElementRoot } from "@webiny/app-page-builder/render/components/ElementRoot";
 
 //...
@@ -385,19 +399,17 @@ const IFrame = ({ element }) => {
   }
 
   // Otherwise, let's render the iframe.
-  return (
-    <ElementRoot
-      className={
-        "webiny-pb-base-page-element-style webiny-pb-page-element-embed-iframe " + outerWrapper
-      }
-      element={element}
-    >
-      <div className={innerWrapper}>
-        <div id={data.id} />
-        <iframe src={data.iframe.url} width="100%" height={data.iframe.height} />
-      </div>
-    </ElementRoot>
-  );
+    return (
+        <ElementRoot
+            className={
+                "webiny-pb-base-page-element-style webiny-pb-page-element-embed-iframe " +
+                outerWrapper
+            }
+            element={element}
+        >
+            <iframe src={data.iframe.url} width="100%" height="100%" />
+        </ElementRoot>
+    );
 };
 
 export default IFrame;
@@ -408,70 +420,69 @@ Along with the actual page, this plugin will also responsible for rendering the 
 <!-- vale off -->
 
 <img
-  src={require("../assets/page-builder/page-preview-inside-editor.png").default}
-  style={{ marginBottom: 20 }}
-  alt="Page preview inside editor"
+    src={require("./assets/preview.png").default}
+    style={{marginBottom: 20}}
+    alt="Page preview inside editor"
 />
 
 <!-- vale on -->
 
-#### Register Plugins in the Admin App
+### Register Plugins in the Admin Area Application
 
-Now that we've created plugins for `iFrame` element. We need to register them in `apps/admin` to work.
-Let's make the required changes as shown below:
+Now that we've created plugins for the `iframe` element, we need to register them in the Admin Area application to work.
+Let's make the following changes in [`apps/admin/code/src/plugins/pageBuilder/editorPlugins.ts`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/admin/code/src/plugins/pageBuilder/editorPlugins.ts) file:
 
-`apps/admin/code/src/plugins/pageBuilder/editorPlugins.ts`
+```ts title="apps/admin/code/src/plugins/pageBuilder/editorPlugins.ts" {5,8-9}
+// Some code is removed for the sake of brevity.
+(...)
 
-<!-- vale off -->
+// Import the `iframe` element and it's settings
+import iframeElement, { iframeSettings } from "@extensions/pb-element-iframe/admin";
 
-<a href={require("../assets/page-builder/apps-admin-pb-editor-plugins.png").default} target="_blank">
-  <img
-    src={require("../assets/page-builder/apps-admin-pb-editor-plugins.png").default}
-    style={{ marginBottom: 20 }}
-    alt="Page Builder editor plugins"
-  />
-</a>
+export default [
+    iframeElement(),
+    iframeSettings,
+    // Rest of the plugins
+    (...)
+];
+```
 
-<!-- vale on -->
+Also in [`apps/admin/code/src/plugins/pageBuilder/renderPlugins.ts`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/admin/code/src/plugins/pageBuilder/renderPlugins.ts) file:
 
-`apps/admin/code/src/plugins/pageBuilder/renderPlugins.ts`
+```ts title="apps/admin/code/src/plugins/pageBuilder/renderPlugins.ts" {5,9}
+// Some code is removed for the sake of brevity.
+(...)
 
-<!-- vale off -->
-<a href={require("../assets/page-builder/apps-website-pb-render-plugins.png").default} target="_blank">
-  <img
-    src={require("../assets/page-builder/apps-website-pb-render-plugins.png").default}
-    style={{ marginBottom: 20 }}
-    alt="Page Builder editor plugins"
-  />
-</a>
+// Import the `iframe` element
+import iframeElement from "@extensions/pb-element-iframe/render";
 
-<!-- vale on -->
+export default [
+    // Elements
+    iframeElement(),
+    // Rest of the plugins
+    (...)
+];
+```
 
-After registering the plugins successfully you will see them in the Admin app as shown below:
+After registering the plugins successfully, we should be able to see the `iframe` element in the Admin Area application, as shown below:
 
 <!-- vale off -->
 
 <img
-  src={require("../assets/page-builder/pb-editor-toolbar-iframe-demo.gif").default}
-  style={{ marginBottom: 20 }}
-  alt="Editor Iframe page element"
+    src={require("./assets/iframe-element.gif").default}
+    style={{marginBottom: 20}}
+    alt="Editor Iframe page element"
 />
 
 <!-- vale on -->
 
-:::info
-Using the same approach you can create as many custom elements as you need for your project.
-:::
+## Add Plugins in the Website Application
 
-## Add Plugins in the Website App
+### Render Element Plugin
 
-### Render Plugin
+In order to render the page element in the Website application, we will use the [`PbRenderElementPlugin`](/docs/references/page-builder/plugins#pb-render-page-element) plugin again.
 
-In order to render the page element on the website app, we will use the [`pb-render-page-element`](/docs/references/page-builder/plugins#pb-render-page-element) plugin again.
-
-The render plugin is necessary to load our page element in the page.
-
-```tsx title="packages/iFrameElement/src/render/index.tsx"
+```tsx title="apps/extensions/pb-element-iframe/render/index.tsx"
 import { PbRenderElementPlugin } from "@webiny/app-page-builder/types";
 
 import IFrame from "./components/iFrame";
@@ -487,77 +498,52 @@ export default () =>
   } as PbRenderElementPlugin);
 ```
 
-Like mentioned before the following code snippet shows the `IFrame` component:
+### Register Plugins in the Website Application
 
-```tsx title="packages/iFrameElement/src/render/components/iFrame.tsx"
-import { ElementRoot } from "@webiny/app-page-builder/render/components/ElementRoot";
+Make the following changes in the [`apps/website/code/src/plugins/pageBuilder.ts`](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element/apps/website/code/src/plugins/pageBuilder.ts) file:
 
-//...
+```ts title="apps/website/code/src/plugins/pageBuilder.ts" {5,10}
 // Some code is removed for the sake of brevity.
-//...
+(...)
 
-const IFrame = ({ element }) => {
-  const { data } = element;
-  // If the user didn't enter a URL, let's show a simple message.
-  if (!data.iframe.url) {
-    return <div>IFrame URL is missing.</div>;
-  }
+// Import `iframe` element
+import iframeElement from "@extensions/pb-element-iframe/render";
 
-  // Otherwise, let's render the iframe.
-  return (
-    <ElementRoot
-      className={
-        "webiny-pb-base-page-element-style webiny-pb-page-element-embed-iframe " + outerWrapper
-      }
-      element={element}
-    >
-      <div className={innerWrapper}>
-        <div id={data.id} />
-        <iframe src={data.iframe.url} width="100%" height={data.iframe.height} />
-      </div>
-    </ElementRoot>
-  );
-};
-
-export default IFrame;
+export default [
+    (...)
+    // Page elements
+    iframeElement(),
+    (...)
+];
 ```
 
-:::note
-In order for these plugins to actually work. We need to add them to plugins inside `apps/website`. Please see the example below.
-:::
-
-`apps/website/code/src/plugins/pageBuilder.ts`
-
-<!-- vale off -->
-
-<a href={require("../assets/page-builder/apps-admin-pb-render-plugins.png").default} target="_blank">
-  <img
-    src={require("../assets/page-builder/apps-admin-pb-render-plugins.png").default}
-    style={{ marginBottom: 20 }}
-    alt="Page Builder editor plugins"
-  />
-</a>
-
-<!-- vale on -->
-
-After registering the plugins successfully the page element now will be available in your `website` app, shown in the image below:
+After registering the plugins successfully, the page element should be visible in your Website application:
 
 <!-- vale off -->
 
 <img
-  src={require("../assets/page-builder/iframe-website.png").default}
-  style={{ marginBottom: 20 }}
-  alt="Page preview inside editor"
+    src={require("../assets/page-builder/iframe-website.png").default}
+    style={{marginBottom: 20}}
+    alt="Page preview inside editor"
 />
 
 <!-- vale on -->
 
 ## Conclusion
 
-Congratulations!! 🎉🥳
+In this tutorial, we’ve learned how we can create a new `iframe` page element and make it configurable within the Page Builder application’s page editor.
+The same approach can be used to create any page element, so make sure to bookmark and revisit this tutorial, in case you need a refresher on any of the steps.
 
-We've successfully created a custom page element for our Page Builder app.
-Use similar approach to easily create a whole array of custom elements for Page Builder app.
+Once again, a full code example can be found in our [webiny examples](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element) Github repository.
+And, if you have further questions, or you simply got stuck, feel free to [ask](https://www.webiny.com/slack) for additional help in our Community Slack.
 
-You can also checkout the full code example in our [repo](https://github.com/webiny/webiny-examples/tree/master/iframe-page-element).
-If you have further questions, feel free to [ask](https://www.webiny.com/slack) for additional help.
+## FAQ
+
+### How to Add Dependencies in Workspace Package?
+You can add dependencies to your workspace package using the `yarn workspace <YOUR_WORKSPACE_NAME> add <DEPENDENCY_NAME>` command.
+
+For example, running the following command, will add the `@webiny/form` as dependency in the `@extensions/pb-element-iframe` workspace package:
+
+```shell
+yarn workspace @extensions/pb-element-iframe add @webiny/form
+```
